--- a/style/account.css
+++ b/style/account.css
@@ -106,8 +106,9 @@ body{
 
 .tab {
   overflow: hidden;
-  margin-left: 60px;
-  /* background-color: white; */
+  /* margin-left: 60px; */
+  background-color: white;
+  margin-left: 5px;
 }
 
 
@@ -130,33 +131,41 @@ body{
 }
 
 .tab button:hover {
-  background-color: rgb(244, 213, 213);
-  border-top-right-radius: 25px;
-  border-top-left-radius: 25px;
+  background-color: rgb(243, 219, 219, 0.6);
+  /* border-top-right-radius: 25px; */
+  /* border-top-left-radius: 25px; */
   transition: all 0.3s;
 }
 
 .tab button.active {
   background-color: rgb(244, 213, 213);
   color: black;
-  border-top-right-radius: 25px;
-  border-top-left-radius: 25px;
+  /* border-top-right-radius: 25px;
+  border-top-left-radius: 25px; */
 }
 
 /* Style the tab content */
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  background-color: rgb(244, 213, 213);
+  /* background-color: rgb(244, 213, 213); */
   /* border-radius: 60px; */
 }
 
+@media (max-width: 500px) {
+  .tab button {
+    padding: 10px 15px;
+    font-size: 12px;
+  }
+  
+}
+
 .content-wrapper{
-  background-color: whitesmoke;
-  margin: 10px;
-  border-radius: 60px;
-  padding: 20px;
-  display: flex;
+  /* background-color: rgb(248, 231, 231); */
+  /* margin: 10px; */
+  /* border-radius: 60px; */
+  /* padding: 20px; */
+  /* display: flex; */
 }
 
 .no-content {
