--- a/style/foooter.css
+++ b/style/foooter.css
@@ -13,7 +13,7 @@ footer {
     margin-top: 40px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     /* background-color: pink; */
-    /* background-color: whitesmoke; */
+    background-color: white;
     /* background-color: rgb(255, 221, 226); */
 }
 
