--- a/style/general.css
+++ b/style/general.css
@@ -8,7 +8,7 @@
 body {
   /* background-color: whitesmoke; */
 
-  font-family: Roboto, 'Times New Roman', Times, serif;
+  font-family: Roboto, Arial, Times New Roman, Times, serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
