--- a/style/rating.css
+++ b/style/rating.css
@@ -5,6 +5,10 @@
 	box-sizing: border-box;
 }
 
+body{
+  background-color: whitesmoke;
+}
+
 .wrapper{
   display: flex;
   justify-content: center;
@@ -62,14 +66,14 @@
 	border-bottom: 0;
 }
 
-.lboard_wrap .lboard_mem .img{
+/* .lboard_wrap .lboard_mem .img{
 	width: 50px;
 }
 
 .lboard_wrap .lboard_mem img{
 	display: block;
 	width: 100%;
-}
+} */
 
 .lboard_wrap .lboard_mem .name_bar{
 	margin: 0 20px;
@@ -115,32 +119,28 @@ tr:nth-child(even) {
 } */
 
 .searchbar-section {
-  display: flex;
-  justify-content: center;
-  margin: 50px;
+  /* display: flex;
+  justify-content: center; */
+  margin: 50px 0;
 }
 
 .searchbar-section div {
   background-color: white;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
-  padding: 20px;
-  border-radius: 50px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  padding: 30px 0;
+  /* border-radius: 50px; */
   display: flex;
   justify-content: center;
   transition: padding 0.4s, border-radius 0.3s;
 }
 
-@media (min-width: 576px) {
-  .searchbar-section div {
-    width: 50%;
-  }
-}
 
-.searchbar-section div:hover{
+
+/* .searchbar-section div:hover{
   padding: 30px 50px;
   border-radius: 80px;
   cursor: pointer;
-}
+} */
 
 .searchbar-section input {
   padding: 15px;
@@ -158,4 +158,17 @@ tr:nth-child(even) {
 .search-icon:hover{
   transform: scale(1.1);
   cursor: pointer;
+}
+
+@media (min-width: 576px) {
+  /* .searchbar-section div {
+    width: 50%;
+  } */
+}
+
+@media (max-width: 768px) {
+  .lboard_section{
+    width: 80%;
+    padding: 15px 10px;
+  }
 }
