--- a/style/competition.css
+++ b/style/competition.css
@@ -11,7 +11,7 @@ main {
 .main-top {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 40px 0;
   width: 100%;
@@ -26,7 +26,7 @@ body {
 .leftbar {
   display: none;
   position: relative;
-  left: 0;
+  /* left: 0; */
   /* bottom: -100%; */
   /* top: 0; */
   max-width: 200px;
@@ -60,7 +60,7 @@ body {
   border: 2px solid gray;
   border-radius: 40px;
 
-  margin: 0 20px;
+  margin: 0 40px;
   padding: 8px 10px;
   cursor: pointer;
   transition: all 0.3s;
@@ -82,7 +82,7 @@ body {
 }
 
 .dropdown {
-  margin-right: 40px;
+  margin: 0px 40px;
   position: relative;
   display: flex;
   flex-direction: row-reverse;
