--- a/style/account.css
+++ b/style/account.css
@@ -132,40 +132,23 @@ body{
 
 .tab button:hover {
   background-color: rgb(243, 219, 219, 0.6);
-  /* border-top-right-radius: 25px; */
-  /* border-top-left-radius: 25px; */
   transition: all 0.3s;
 }
 
 .tab button.active {
   background-color: rgb(244, 213, 213);
   color: black;
-  /* border-top-right-radius: 25px;
-  border-top-left-radius: 25px; */
 }
 
 /* Style the tab content */
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  /* background-color: rgb(244, 213, 213); */
-  /* border-radius: 60px; */
 }
 
-@media (max-width: 500px) {
-  .tab button {
-    padding: 10px 15px;
-    font-size: 14px;
-  }
-  
-}
+
 
 .content-wrapper{
-  /* background-color: rgb(248, 231, 231); */
-  /* margin: 10px; */
-  /* border-radius: 60px; */
-  /* padding: 20px; */
-  /* display: flex; */
 }
 
 .no-content {
@@ -191,11 +174,66 @@ body{
   background-color: rgb(224, 160, 170);
 }
 
-/*  */
-/* .info-window {
-  height: 200px;
-  width: 200px;
-  align-content: center;
-  justify-items: center;
-  border-radius: 20px;
-} */
+@media (max-width: 576px) {
+  .tab button {
+    padding: 10px 15px;
+    font-size: 14px;
+  }
+  
+  .account-pic{
+    width: 120px;
+  }
+
+  .account-nic{
+    font-size: 14px;
+  }
+
+  .applications{
+    margin: 40px 0px;
+  }
+
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+  .account-pic{
+    width: 160px;
+  }
+  .account-nic{
+    font-size: 16px;
+  }
+
+  .applications{
+    margin: 50px 0px;
+  }
+
+
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .account-pic{
+    width: 180px;
+  }
+
+  .account-nic{
+    font-size: 18px;
+  }
+
+}
+
+@media (min-width: 1025px) {
+  .account-pic{
+    width: 200px;
+  }
+
+  .account-nic{
+    font-size: 20px;
+  }
+
+
+}
+
+/* @media (max-width: 576px) {}
+@media (min-width: 577px) and (max-width: 768px) {}
+@media (min-width: 769px) and (max-width: 1024px) {}
+@media (min-width: 1025px) {} */
+  
