--- a/style/account_topbar.css
+++ b/style/account_topbar.css
@@ -3,20 +3,16 @@
 }
 
 .navigation {
-  /* height: 80px; */
   background-color: white;
 
   padding: 0 20px;
-
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .account_home {
-  /* justify-content: left; */
   font-size: 20px;
   font-weight: 500;
   display: flex;
@@ -29,7 +25,6 @@
 .account_home img {
   width: 40px;
   padding: 0;
-  /* margin: 10px; */
 }
 
 .account_home a {
@@ -47,7 +42,6 @@
   margin: 0 20px;
   width: 35px;
   cursor: pointer;
-
 }
 
 .icons {
@@ -59,7 +53,6 @@
 
 .plus-button {
   background-color: white;
-  /* background-color: rgb(250, 207, 214); */
   border: none;
   padding: 0;
   margin: 0;
@@ -69,7 +62,6 @@
 
 .tooltip {
   position: absolute;
-  /* align-self: center; */
   background-color: rgba(255, 255, 255, 0.9);
   padding: 4px 8px;
   border-radius: 4px;
@@ -105,6 +97,7 @@
   width: 320px;
   max-height: 0px;
   overflow: hidden;
+  z-index: 10;
   transition: max-height 0.3s;
 }
 
@@ -176,10 +169,3 @@
 
 @media (min-width: 1025px) {}
 
-
-/* .account-pic {
-  width: 40px;
-  /* margin: 0 20px; */
-/* border-radius: 30px; 
-  cursor: pointer;
-} */
