--- a/style/general.css
+++ b/style/general.css
@@ -6,8 +6,6 @@
 */
 
 body {
-  /* background-color: whitesmoke; */
-
   font-family: Roboto, Arial, Times New Roman, Times, serif;
   margin: 0;
   padding: 0;
@@ -21,8 +19,23 @@ body {
 
 main {
   flex-grow: 1;
+  /* анімація для сторінки */
+  opacity: 0;
+  transform: translateY(30px);
+  animation: pageAnimation 1s forwards;
 }
 
+@keyframes pageAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 h1 {
   margin: 30px 0;
