--- a/style/hackathon.css
+++ b/style/hackathon.css
@@ -1,5 +1,4 @@
-*,
-h1 {
+*, h1 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -50,7 +49,6 @@ h1 {
 
 .join-button {
     background-color: #679897;
-    /* color: white; */
     border: none;
     padding: 15px 20px;
     margin: 10px 0;
@@ -68,8 +66,6 @@ h1 {
     background-color: white;
 }
 
-.hackathon-info {}
-
 .deadline,
 .location,
 .prize,
@@ -78,12 +74,9 @@ h1 {
     margin: 30px 0;
 }
 
-.location {}
-
 .location img {
     width: 20px;
     margin: 0 10px;
-    /* height: 20px; */
 }
 
 .prize {
@@ -91,8 +84,8 @@ h1 {
     text-decoration: underline dotted rgb(16, 16, 100);
 }
 
+.location {}
 .theme {}
-
 .hackathon-organizer {}
 
 .second-section {
@@ -130,25 +123,3 @@ h1 {
     }
 
 }
-
-
-/* --------------------------------------------------------------- */
-
-table{
-    width: 80%;
-    margin: auto;
-    border-collapse: collapse;
-    background: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.row{
-    padding: 10px;
-    border: 1px solid rgb(153, 153, 153);
-}
-
-/* th {
-    border: 1px solid rgb(90, 90, 90);
-    /* background-color: lightpink; 
-    background-color: rgb(255, 221, 226);
-} */
