--- a/my-react-app/src/style/competition.css
+++ b/my-react-app/src/style/competition.css
@@ -1,7 +1,7 @@
 main {
   background-color: whitesmoke;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   position: relative;
 }
 
@@ -14,6 +14,7 @@ main {
   width: 100%;
   background-color: white;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  position: relative;
 }
 
 body {
@@ -32,7 +33,7 @@ body {
   transition: all 0.3s;
 }
 
-.leftbar.open-menu{
+.leftbar.open-menu {
   display: block;
 }
 
@@ -67,7 +68,7 @@ body {
   margin: 0px 5px;
 }
 
-.search{
+.search {
   padding: 10px;
   border: 2px solid gray;
   border-radius: 10px;
@@ -80,15 +81,15 @@ body {
   position: relative;
   display: flex;
   flex-direction: row-reverse;
-  
+
 }
 
-.sort-details{
+.sort-details {
   padding: 10px;
   white-space: nowrap
 }
 
-.dropdown-content{
+.dropdown-content {
   display: none;
   position: absolute;
   top: 40px;
@@ -98,18 +99,18 @@ body {
   z-index: 100;
 }
 
-.dropdown-content a{
+.dropdown-content p {
   padding: 12px 16px;
   display: block;
   text-decoration: none;
   color: black;
 }
 
-.dropdown-content a:hover{
+.dropdown-content a:hover {
   background-color: #ddd;
 }
 
-.dropdown:hover .dropdown-content{
+.dropdown:hover .dropdown-content {
   display: block;
 }
 
@@ -118,11 +119,12 @@ body {
     grid-template-columns: 280px;
   }
 
-  .filter, .dropdown{
+  .filter,
+  .dropdown {
     margin: 0 10px;
   }
 
-  .filter img{
+  .filter img {
     width: 30px;
   }
 
@@ -133,11 +135,11 @@ body {
     grid-template-columns: 260px 260px;
   }
 
-  .leftbar{
+  .leftbar {
     display: none;
   }
 
-  .filter img{
+  .filter img {
     width: 30px;
   }
 
@@ -160,29 +162,36 @@ body {
 
 /* left side navigation */
 
-.sidenav{
+.sidenav {
   height: 100%;
   width: 0;
   position: absolute;
   z-index: 5;
   top: 0;
   left: 0;
-  background-color: rgb(17, 17, 17);
+  background-color: rgba(17, 17, 17, 0.9);
 
   overflow: hidden;
   transition: all 0.3s;
 }
 
-form{
+
+.sidenav.open {
+  width: 250px;
+}
+
+form {
   margin-top: 60px;
 }
 
-form h2{
+form h2 {
   color: #818181;
   margin: 15px 0;
 }
 
-.sidenav a, .sidenav label{
+.sidenav button,
+.sidenav a,
+.sidenav label {
   cursor: pointer;
   padding: 10px 20px;
   text-align: left;
@@ -191,18 +200,21 @@ form h2{
   transition: 0.3s;
 }
 
-.sidenav a:hover, .sidenav label:hover{
+.sidenav button:hover,
+.sidenav a:hover,
+.sidenav label:hover {
   color: hsl(0, 0%, 95%);
 }
 
-.sidenav .closebtn{
+.sidenav .closebtn {
+  background-color: none;
   position: absolute;
   top: 0;
   right: 25px;
-  font-size: 36px;
+  font-size: 25px;
 }
 
-.sidenav .searchbtn{
+.sidenav .searchbtn {
   margin-top: 20px;
   padding: 10px 16px;
   border: none;
@@ -214,13 +226,19 @@ form h2{
   transition: 0.15s;
 }
 
-.sidenav .searchbtn:hover, .sidenav .searchbtn:active{
+.sidenav .searchbtn:hover,
+.sidenav .searchbtn:active {
   color: hsl(0, 0%, 20%);
 }
 
 @media screen and (max-height: 576px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 /*-------------------------*/
