--- a/my-react-app/src/style/hackathon.css
+++ b/my-react-app/src/style/hackathon.css
@@ -84,9 +84,9 @@
     text-decoration: underline dotted rgb(16, 16, 100);
 }
 
-.location {}
+/* .location {}
 .theme {}
-.hackathon-organizer {}
+.hackathon-organizer {} */
 
 .second-section {
     background-color: whitesmoke;
