--- a/my-react-app/src/style/hackathon.css
+++ b/my-react-app/src/style/hackathon.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+main{
+    position: relative;
+    /* justify-content: center; */
+    align-items: center;
+}
+
 .title {
     font-weight: 500;
     font-size: 35px;
@@ -122,4 +128,30 @@
         margin: 0;
     }
 
+}
+
+.banner{
+    display: none;
+    position: absolute;
+    top: 20px;
+
+    background-color: white;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    transition: all 0.3s;
+}
+
+.banner p{
+    font-size: 16px;
+    padding: 10px;
+}
+
+.banner button{
+    font-size: 16px;
+    margin: 10px;
+    padding: 10px 15px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
