auth and db with firebase

--- a/my-react-app/src/style/hackathon.css
+++ b/my-react-app/src/style/hackathon.css
@@ -6,7 +6,6 @@
 
 main{
     position: relative;
-    /* justify-content: center; */
     align-items: center;
 }
 
@@ -17,6 +16,7 @@ main{
 
 .preview {
     background-color: whitesmoke;
+    width: 100%;
     padding: 50px;
     margin: 40px 0px;
     display: flex;
@@ -24,7 +24,6 @@ main{
 }
 
 .left-side {
-    flex: 2;
     align-items: start;
     text-align: left;
     padding: 0 60px;
@@ -66,7 +65,6 @@ main{
 .right-side {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    flex: 1;
     padding: 10px 20px;
     margin: 0 30px;
     background-color: white;
