--- a/my-react-app/src/style/account.css
+++ b/my-react-app/src/style/account.css
@@ -28,7 +28,7 @@ body{
   border: 2px dotted white;
 }
 
-.account-nic {
+.account-nick {
   font-family: Inconsolata, Roboto, sans-serif;
   background-color: black;
   opacity: 80%;
@@ -151,7 +151,7 @@ body{
     width: 120px;
   }
 
-  .account-nic{
+  .account-nick{
     font-size: 14px;
   }
 
@@ -165,7 +165,7 @@ body{
   .account-pic{
     width: 160px;
   }
-  .account-nic{
+  .account-nick{
     font-size: 16px;
   }
 
@@ -181,7 +181,7 @@ body{
     width: 180px;
   }
 
-  .account-nic{
+  .account-nick{
     font-size: 18px;
   }
 
@@ -192,7 +192,7 @@ body{
     width: 200px;
   }
 
-  .account-nic{
+  .account-nick{
     font-size: 20px;
   }
 
